tests/snapshots/examples_fixtures/type_system__failing__40_effect_alias_print_in_time_function.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/40_effect_alias_print_in_time_function.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `p` requires effect `IO` in this function signature.

  examples/type_system/failing/40_effect_alias_print_in_time_function.flx:5:5
  |
5 |     p("tick")
  |     ^
  |     - effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
